test/should-fail/vsgc4038sub.f3
/**
 * @subtest vsgc4038test.f3
 *
 *
 */
public var f=function(){vsgc4038test{}.func()}
